# Python-Portfolio

BallBouncer/: entities.py  main.py
BallBouncerC++/: CMakeLists.txt  common.h  entities.cpp  main.cpp  qt.cpp
Dogfight-Updated/: main.py
Graphics-Engine/: classes.py  main.py  test.py
MDoF-Simulator/: main.py
MOI-Calculator/: main.py
Mass-Optimizer/WP2/: Plane.xfl
Numerical-Methods-Suite/: main.py
Terrain-Generator/: main.py
